learn: add stack

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-ts-playground",
+  "name": "learn-algorithm",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
